--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.20.6",
+    "@stripe/react-stripe-js": "^3.6.0",
+    "@stripe/stripe-js": "^7.2.0",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.0",
